HBASE-29850 Add request attributes factory to remaining builders